test/domains/sungeun/rect/plus_equals_illegal_1.good
plus_equals_illegal_1.chpl:9: error: Cannot add indices to a rectangular domain
